# paseto-wasm

./: Cargo.toml  Justfile  LICENSE  benchmark.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  test-cross-impl.mjs  test-data.json  test-node.mjs  test-vectors.mjs  tsconfig.json  vite.config.js
examples/benchmark/: index.html  package.json  tsconfig.json  vite.config.ts
examples/benchmark/src/: main.ts  style.css
examples/benchmark/src/workers/: benchmark.worker.ts
src/: common.rs  lib.rs  v3.rs  v4.rs
tests/: node_test.cjs  web.rs
