[package]
name = "paseto-wasm"
version = "2.0.0"
edition = "2021"
authors = ["Achmad Kurnianto <me@achmadk.com>"]
description = "execute PASETO methods inside WASM (web assembly)"
repository = "https://github.com/achmadk/paseto-wasm"
license = "MIT"
readme = "readme.md"
keywords = ["PASETO", "cryptography", "JWT", "JWE"]
categories = ["development-tools"]

[features]
default = ["v4"]
v4 = []
v3 = ["dep:rusty_paseto_v3"]

[lib]

crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
rusty_paseto = { version = "0.9", features = ["v4_local", "v4_public", "generic", "paserk"] }
rusty_paseto_v3 = { version = "0.9", git = "https://github.com/rrrodzilla/rusty_paseto", package = "rusty_paseto", features = ["v3_local", "v3_public", "generic", "paserk"], optional = true, default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
getrandom = { version = "0.3", features = ["wasm_js"] }
hex = "0.4"
ring = { version = "0.17", features = ["wasm32_unknown_unknown_js"] }
ed25519-dalek = "2.2"
rand = "0.8"
base64 = "0.22"
blake2 = "0.10"
aes = "0.9"
ctr = "0.10"
hmac = "0.13"
sha2 = "0.11"
p384 = { version = "0.13", features = ["std", "pem"] }
hkdf = "0.13"
[dev-dependencies]
wasm-bindgen-test = "0.3"
